# Analizer_LED_ms_HT

./: .gitignore  analizer.cpp  analizer.h  pinsDef.h
doxygen/: Doxyfile
doxygen/html/: _s_p_i_8cpp.html  _s_p_i_8cpp_source.html  _s_p_i_8d.html  _s_p_i_8d_source.html  _statistic_8cpp.html  _statistic_8cpp_source.html  _statistic_8d.html  _statistic_8d_source.html  _statistic_8h.html  _statistic_8h.js  _statistic_8h_source.html  _win_serial_port_8cpp.html  _win_serial_port_8cpp_source.html  _win_serial_port_8h.html  _win_serial_port_8h_source.html  analizer_8cpp.html  analizer_8cpp.js  analizer_8cpp_source.html  analizer_8d.html  analizer_8d_source.html  analizer_8h.html  analizer_8h.js  analizer_8h_source.html  analizer_c_d_c_8cpp.html  analizer_c_d_c_8cpp_source.html  analizer_c_d_c_8h.html  analizer_c_d_c_8h_source.html  annotated.html  annotated.js  build-analizer__host-_desktop___qt__5__9__0___g_c_c__64bit-_release_2moc__analizer_c_d_c_8cpp.html  build-analizer__host-_desktop___qt__5__9__0___g_c_c__64bit-_release_2moc__analizer_c_d_c_8cpp.js  build-analizer__host-_desktop___qt__5__9__0___g_c_c__64bit-_release_2moc__analizer_c_d_c_8cpp_source.html  build-analizer__host-_desktop___qt__5__9__0___g_c_c__64bit-_release_2moc__mydevice_8cpp.html  build-analizer__host-_desktop___qt__5__9__0___g_c_c__64bit-_release_2moc__mydevice_8cpp.js  build-analizer__host-_desktop___qt__5__9__0___g_c_c__64bit-_release_2moc__mydevice_8cpp_source.html  build-analizer__host-_desktop___qt__5__9__0___g_c_c__64bit-_release_2moc__predefs_8h.html  build-analizer__host-_desktop___qt__5__9__0___g_c_c__64bit-_release_2moc__predefs_8h.js  build-analizer__host-_desktop___qt__5__9__0___g_c_c__64bit-_release_2moc__predefs_8h_source.html  build-analizer__host-_desktop___qt__5__9__0___g_c_c__64bit-_release_2qrc__qml_8cpp.html  build-analizer__host-_desktop___qt__5__9__0___g_c_c__64bit-_release_2qrc__qml_8cpp.js  (+121 more)
doxygen/latex/: _s_p_i_8cpp.tex  _s_p_i_8d.tex  _statistic_8cpp.tex  _statistic_8d.tex  _statistic_8h.tex  _win_serial_port_8cpp.tex  _win_serial_port_8h.tex  analizer_8cpp.tex  analizer_8d.tex  analizer_8h.tex  analizer_c_d_c_8cpp.tex  analizer_c_d_c_8h.tex  annotated.tex  build-analizer__host-_desktop___qt__5__9__0___g_c_c__64bit-_release_2moc__analizer_c_d_c_8cpp.tex  build-analizer__host-_desktop___qt__5__9__0___g_c_c__64bit-_release_2moc__mydevice_8cpp.tex  build-analizer__host-_desktop___qt__5__9__0___g_c_c__64bit-_release_2moc__predefs_8h.tex  class_my_device.tex  class_statistic.tex  class_win_serial_port.tex  (+32 more)
host/analizer_host/: About.qml  CMakeLists.txt  ChartView.qml  HistogramView.qml  Settings.qml  WinSerialPort.cpp  WinSerialPort.h  analizerCDC.cpp  analizerCDC.h  analizer_host.pro  filevalidator.cpp  main.cpp  main.qml  mydevice.cpp  qml.qrc
host/analizer_host/QMLs/: ButtonLabel.qml  ChartViewEditBar.qml  CustomLegend.qml  MainMenu.qml
host/analizer_host/src/: About.qml  CMakeLists.txt  ChartView.qml  HistogramView.qml  Settings.qml  WinSerialPort.cpp  analizerCDC.cpp  analizerCDC.h  datahandler.cpp  datahandler.h  main.cpp  main.qml  qml.qrc
host/analizer_host/src/QMLs/: ButtonLabel.qml  ChartViewEditBar.qml  CustomLegend.qml  MainMenu.qml  MenuIconLive.qml
host/analizer_host/src/plugins/: CMakeLists.txt
host/analizer_host/src/plugins/FileValidator/: CMakeLists.txt  filevalidator.cpp
host/analizer_host/src/plugins/ScreenProperties/: CMakeLists.txt  screenproperties.cpp  screenproperties.h
mcu/: analizer.cpp  analizer.h  platformio.ini
(+90 files in other folders)
